--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,57 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+html {
+  /*background-color: navy;*/
+  font-size: 14px;
+}
+h1 {
+  font-family: Tahoma, Verdana, Geneva, sans-serif;
+}
+h2 {
+  font-family: Trebuchet, Tahoma, Arial, sans-serif;
+}
+header {
+  border-bottom: 1px solid gray;
+}
+ul {
+  padding: 0px;
+}
+.class-list {
+  list-style-type: square;
+}
+.item {
+  border: 1px solid blue;
+}
+.even {
+  background-color: gray;
+}
+.odd {
+  background-color: black;
+  color: white;
+}
+#item1 {
+  font-size: 30px;
+}
+#item2 {
+  text-align: right;
+}
+ol > li {
+  padding: 20px;
+  background-color: gray;
+}
+ul > li {
+  padding: 0;
+  background-color: white;
+}
+ol > li:nth-child(odd) {
+  background-color: green;
+}
+ol a:hover {
+  text-decoration: none;
+}
+ol ul a:hover {
+  background-color: yellow;
+}
+ol us a:active {
+  color: red;
+}
